--- a/KHONJUE_SCHEDULE/KHONJUE_SCHEDULE.csproj
+++ b/KHONJUE_SCHEDULE/KHONJUE_SCHEDULE.csproj
@@ -13,6 +13,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Resources\Management\CREATE_TERM_SUBJECT_FORM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Resources\Management\CREATE_TERM_FORM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Resources\Management\TermSubjectManagement.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Update="Resources\Management\TermManagement.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Update="Resources\Management\MajorManagement.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Update="Resources\Setting\ROLE_FORM.cs">
       <SubType>Form</SubType>
     </Compile>
